HQT-57 KMJ Product Read 조회처리중(2024-11-07) ProductService 에서 ReadDTO 데이터 형식으로 가공처리 현재 Category 이름만 가져옴 추후 CategoryEntity전체를 가져오도록 변경 예정